[chromium] Restore canvas2D acceleration after context loss. https://bugs.webkit.org/show_bug.cgi?id=80629

Reviewed by James Robinson.

Covered by existing canvas tests, and manual testing (killing the GPU
process).

Source/WebCore:

* platform/graphics/chromium/Canvas2DLayerChromium.cpp:
(WebCore::Canvas2DLayerChromium::create):
(WebCore::Canvas2DLayerChromium::Canvas2DLayerChromium):
(WebCore::Canvas2DLayerChromium::setNeedsDisplayRect):
(WebCore::Canvas2DLayerChromium::drawsContent):
(WebCore::Canvas2DLayerChromium::paintContentsIfDirty):
* platform/graphics/chromium/Canvas2DLayerChromium.h:
(Canvas2DLayerChromium):
* platform/graphics/chromium/cc/CCRenderSurface.cpp:
(WebCore::CCRenderSurface::applyFilters):
* platform/graphics/gpu/SharedGraphicsContext3D.cpp:
(SharedGraphicsContext3DImpl):
(WebCore::SharedGraphicsContext3DImpl::SharedGraphicsContext3DImpl):
(WebCore::SharedGraphicsContext3DImpl::get):
(WebCore):
(WebCore::SharedGraphicsContext3D::get):
* platform/graphics/gpu/SharedGraphicsContext3D.h:
(SharedGraphicsContext3D):
* platform/graphics/skia/ImageBufferSkia.cpp:
(WebCore::createAcceleratedCanvas):
* platform/graphics/skia/PlatformContextSkia.cpp:
(WebCore::PlatformContextSkia::PlatformContextSkia):
(WebCore):
* platform/graphics/skia/PlatformContextSkia.h:
(WebCore):
(WebCore::PlatformContextSkia::isAccelerated):
(WebCore::PlatformContextSkia::setAccelerated):
(PlatformContextSkia):

Source/WebKit/chromium:

* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::sharedGraphicsContext3D):


Canonical link: https://commits.webkit.org/98063@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110483 268f45cc-cd09-0410-ab3c-d52691b4dbfc