Source/WebCore/platform/graphics/chromium/Canvas2DLayerChromium.h
@@ -47,7 +47,7 @@ class Region;
 // A layer containing an accelerated 2d canvas
 class Canvas2DLayerChromium : public CanvasLayerChromium {
 public:
-    static PassRefPtr<Canvas2DLayerChromium> create(GraphicsContext3D*, const IntSize&);
+    static PassRefPtr<Canvas2DLayerChromium> create(PassRefPtr<GraphicsContext3D>, const IntSize&);
     virtual ~Canvas2DLayerChromium();
 
     void setTextureId(unsigned);
@@ -65,12 +65,13 @@ public:
     void setCanvas(SkCanvas*);
 
 private:
-    Canvas2DLayerChromium(GraphicsContext3D*, const IntSize&);
+    Canvas2DLayerChromium(PassRefPtr<GraphicsContext3D>, const IntSize&);
 
     friend class Canvas2DLayerChromiumTest;
     void setTextureManager(TextureManager*);
 
-    GraphicsContext3D* m_context;
+    RefPtr<GraphicsContext3D> m_context;
+    bool m_contextLost;
     IntSize m_size;
     unsigned m_backTextureId;
     Platform3DObject m_fbo;
