Source/WebCore/platform/graphics/skia/PlatformContextSkia.h
@@ -47,7 +47,6 @@
 namespace WebCore {
 
 enum CompositeOperator;
-class GraphicsContext3D;
 class Texture;
 
 // This class holds the platform-specific state for GraphicsContext. We put
@@ -181,8 +180,8 @@ public:
     void clearImageResamplingHint();
     bool hasImageResamplingHint() const;
 
-    bool isAccelerated() const { return m_gpuContext; }
-    void setGraphicsContext3D(GraphicsContext3D*);
+    bool isAccelerated() const { return m_accelerated; }
+    void setAccelerated(bool accelerated) { m_accelerated = accelerated; }
 
     // True if this context is deferring draw calls to be executed later.
     // We need to know this for context-to-context draws, in order to know if
@@ -237,9 +236,9 @@ private:
     IntSize m_imageResamplingHintSrcSize;
     FloatSize m_imageResamplingHintDstSize;
     bool m_printing;
+    bool m_accelerated;
     bool m_deferred;
     bool m_drawingToImageBuffer;
-    GraphicsContext3D* m_gpuContext;
 };
 
 }
